--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: '18'
       - name: Install backend dependencies
         run: npm ci
-        working-directory: ./server
+        working-directory: ./Projet - Dokaa/server
       - name: Run backend tests
         run: npm test
-        working-directory: ./server
+        working-directory: ./Projet - Dokaa/server
         env:
           DISABLE_SCRAPING: 'true'
 
@@ -38,11 +38,11 @@ jobs:
           node-version: '18'
       - name: Install frontend dependencies
         run: npm ci
-        working-directory: ./client
+        working-directory: ./Projet - Dokaa/client
       - name: Run frontend lint
         run: npm run lint --if-present
-        working-directory: ./client
+        working-directory: ./Projet - Dokaa/client
       - name: Build frontend
         run: npm run build --if-present
-        working-directory: ./client
+        working-directory: ./Projet - Dokaa/client
 
