--- a/Projet - Dokaa/server/package.json
+++ b/Projet - Dokaa/server/package.json
@@ -16,17 +16,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "puppeteer": "^21.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.4.0",
-    "axios": "^1.6.0"
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "strip-comments": "^2.0.1",
     "supertest": "^6.3.3"
   }
 }
-
